Legal basis duration